--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/artemis"]
-	path = themes/artemis
-	url = git@github.com:Dreyer/hexo-theme-artemis.git
+[submodule "themes/vexo"]
+	path = themes/vexo
+	url = git@github.com:Hiroshiba/hexo-theme-vexo.git
