--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ timezone: Asia/Tokyo
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://hiroshiba.github.io
-root: /blog/
+url: http://blog.hiroshiba.jp/
+root: /
 permalink: :title/
 permalink_defaults:
 
