--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-pug": "0.0.5",
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.2.0",
-    "hexo-tag-figure": "^0.2.0"
+    "hexo-tag-figure": "^0.2.0",
+    "markdown-it-footnote": "^3.0.1"
   }
 }
