--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,15 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
+# feed
+feed:
+  hub: http://pubsubhubbub.appspot.com
+
+sitemap:
+    path: sitemap.xml
+    tag: false
+    category: false
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
