--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
-    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-index": "^0.2.1",
+    "hexo-generator-seo-friendly-sitemap": "0.0.25",
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.0",
+    "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-pug": "0.0.5",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0",
-    "hexo-tag-figure": "^0.2.0",
+    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-server": "^0.3.3",
+    "hexo-tag-figure": "^0.4.1",
     "markdown-it-footnote": "^3.0.1"
   }
 }
