--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "hexo-site",
+  "name": "hiho-blog",
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "dependencies": {
-    "hexo": "^3.8.0",
+    "hexo": "^3.9.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-footnotes": "^1.0.2",
     "hexo-generator-archive": "^0.1.5",
