--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,10 @@ relative_link: false
 future: true
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   auto_detect: false
-  tab_replace:
+  hljs: true
+  wrap: false
 marked:
   breaks: false
 
